# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: check_work.yml
page_analyzer/: app.py  data_validators.py  queries.py
page_analyzer/templates/: base.html  index copy.html  index.html  url_id.html  urls.html
