[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander & Ludmila Markiza <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet-code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
