[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A tool for analyzing the structure and content of web pages."
authors = ["Alexander & Ludmila Markiza <alarriva@yandex.ru>"]
repository = "https://github.com/AlexanderLarriva/python-project-83"
readme = "README.md"
packages = [{include = "page_analyzer"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://python-page-analyzer-ru.onrender.com"
"Bug Tracker" = "https://github.com/AlexanderLarriva/python-project-83/issues"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
